GN-191 Fix - on course page after course description fix action of enrolment button was too small.

--- a/assets/base_css/base_styles.css
+++ b/assets/base_css/base_styles.css
@@ -5470,6 +5470,7 @@ div#home-slider #slider-objects > h1 {
 
 div.nau_button a {
   padding: 0;
+  display: block;
 }
 
 .nau-waves {
